Fix filelist shifting up one row on (multi)select

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -73,8 +73,7 @@ table th#headerSize, table td.filesize { min-width:3em; padding:0 1em; text-alig
 table th#headerDate, table td.date { min-width:11em; padding:0 .1em 0 1em; text-align:left; }
 
 /* Multiselect bar */
-table.multiselect { top:63px; }
-table.multiselect thead { position:fixed; top:82px; z-index:1; }
+table.multiselect thead { z-index:1; }
 table.multiselect thead th { background:rgba(230,230,230,.8); color:#000; font-weight:bold; border-bottom:0; }
 
 table td.selection, table th.selection, table td.fileaction { width:2em; text-align:center; }
